updated stream urls for weekend 2

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       
       <label for="stage">Choose a stage: </label>
       <select name="stage" id="stage">
-        <option value="Coachella Stage,https://www.youtube.com/watch?v=dYTuZMRFhFY">Coachella Stage</option>
-        <option value="Outdoor Theater,https://www.youtube.com/watch?v=F6A3iDbujrI">Outdoor Theater</option>
-        <option value="Sahara,https://www.youtube.com/watch?v=7oLK1VcvROg">Sahara</option>
-        <option value="Mojave,https://www.youtube.com/watch?v=UsXtPO4tUYE">Mojave</option>
-        <option value="Gobi,https://www.youtube.com/watch?v=13QtsdFLVG4">Gobi</option>
-        <option value="Yuma,url">Yuma</option>
-        <option value="Sonora,https://www.youtube.com/watch?v=LJKAKq574tk">Sonora</option>
+        <option value="Coachella Stage,https://www.youtube.com/watch?v=iYPwEzMm8i4">Coachella Stage</option>
+        <option value="Outdoor Theater,https://www.youtube.com/watch?v=M7zW11KC1Nk">Outdoor Theater</option>
+        <option value="Sahara,https://www.youtube.com/watch?v=keHf1_peYws">Sahara</option>
+        <option value="Mojave,https://www.youtube.com/watch?v=qwkyHiPoYY4">Mojave</option>
+        <option value="Gobi,https://www.youtube.com/watch?v=GSRtPr96hss">Gobi</option>
+        <option value="Yuma,https://www.youtube.com/watch?v=CN_4koTned0">Yuma</option>
+        <option value="Sonora,url">Sonora</option>
       </select>
 
       <label for="pastedData">Paste data from description here: </label>
