updating stream urls for 2025 Weekend 1

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
       
       <label for="stage">Choose a stage: </label>
       <select name="stage" id="stage">
-        <option value="Coachella Stage,https://www.youtube.com/watch?v=iYPwEzMm8i4">Coachella Stage</option>
-        <option value="Outdoor Theater,https://www.youtube.com/watch?v=M7zW11KC1Nk">Outdoor Theater</option>
-        <option value="Sahara,https://www.youtube.com/watch?v=keHf1_peYws">Sahara</option>
-        <option value="Mojave,https://www.youtube.com/watch?v=qwkyHiPoYY4">Mojave</option>
-        <option value="Gobi,https://www.youtube.com/watch?v=GSRtPr96hss">Gobi</option>
-        <option value="Yuma,https://www.youtube.com/watch?v=CN_4koTned0">Yuma</option>
-        <option value="Sonora,url">Sonora</option>
+        <option value="Coachella Stage,https://www.youtube.com/watch?v=Y2FzDMuJ5pI">Coachella Stage</option>
+        <option value="Outdoor Theater,https://www.youtube.com/watch?v=WxwawRL_nY8">Outdoor Theater</option>
+        <option value="Sahara,https://www.youtube.com/watch?v=afO7r8TQTSw">Sahara</option>
+        <option value="Mojave,https://www.youtube.com/watch?v=BajnpDN6vG8">Mojave</option>
+        <option value="Gobi,https://www.youtube.com/watch?v=Kg-KswkXoBg">Gobi</option>
+        <option value="Yuma,url">Yuma</option>
+        <option value="Sonora,https://www.youtube.com/watch?v=TdHrgLciYWw">Sonora</option>
+        <option value="Quasar,https://www.youtube.com/watch?v=1MOJG5VTh-Y">Quasar</option>
       </select>
 
       <label for="pastedData">Paste data from description here: </label>
